--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ c111130125@nkust.edu.tw
     
     });
 </script>
-<button onclick="dohit(this)"><img></button>
-<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fkusdom.com%2Fimage%2Fcache%2Fuploaded%2Fkshop%2Flogo%2F202202%2F1645775594-logo-200x200-100.jpg%3Fv%3D152928588&imgrefurl=https%3A%2F%2Fkusdom.com%2Fmdzz3310%2Fzh_tw&tbnid=dmCrQb_Fdn8VmM&vet=12ahUKEwj6xoqNicv6AhUDfpQKHUlPBK0QMygRegUIARDAAQ..i&docid=Dc_7jj7GrsJnRM&w=200&h=200&q=%E9%87%8E%E7%94%9F%E5%96%B5%E5%96%B5%E6%80%AA&ved=2ahUKEwj6xoqNicv6AhUDfpQKHUlPBK0QMygRegUIARDAAQ">
+<button onclick="dohit(this)>
+<img src="image.png"></button>
 點次數:<label id="myhit">7</label><br>
 
 </div>
