--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ c111130125@nkust.edu.tw
     });
 </script>
 <button onclick="dohit(this)>
-<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fstickershop.line-scdn.net%2Fstickershop%2Fv1%2Fproduct%2F18555334%2FLINEStorePC%2Fmain.png&imgrefurl=https%3A%2F%2Fyabeline.tw%2FStickers_Data.php%3FNumber%3D18555334&tbnid=5hSAKvz9mPIDMM&vet=12ahUKEwj6xoqNicv6AhUDfpQKHUlPBK0QMygZegUIARDVAQ..i&docid=apFV2B1kvaCejM&w=240&h=240&q=%E9%87%8E%E7%94%9F%E5%96%B5%E5%96%B5%E6%80%AA&ved=2ahUKEwj6xoqNicv6AhUDfpQKHUlPBK0QMygZegUIARDVAQ"></button>
+<img src="image.png"></button>
 點次數:<label id="myhit">7</label><br>
 
 </div>
