--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ c111130125@nkust.edu.tw
     });
 </script>
 <button onclick="dohit(this)>
-<img src="image.png"></button>
+<img height="30px" width="30px" src="image.png"></button>
 點次數:<label id="myhit">7</label><br>
 
 </div>
