--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@ c111130125@nkust.edu.tw
     
     });
 </script>
-<button onclick="dohit(this)>
+
+<button onclick="dohit(this)">
+
 <img height="30px" width="30px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGbCS3rUsGHow3Lti2aKvAPmF8hHXob-aRtA&usqp=CAU"></button>
 點次數:<label id="myhit">7</label><br>
 
